# cpp-learning

./: .gitignore  CMakeLists.txt  Doxyfile  INTEGRATION.md  LICENSE  PLANNING.md  README.md  TESTING.md  build.sh  conanfile.py  generate_docs.sh  run_stress_test.sh  test_gateway.sh
src/: CMakeLists.txt  MessageHandler.cpp  MessageQueue.cpp  StateMachine.cpp  main.cpp
src/include/: ExampleStates.h  Message.h  MessageHandler.h  MessageQueue.h  MessageTypes.h  State.h  StateMachine.h
tests/: CMakeLists.txt  test_gateway.cpp  test_integration.cpp  test_message_handler.cpp  test_message_queue.cpp  test_message_types.cpp  test_state_machine.cpp
tools/: CMakeLists.txt  ecu_simulator.cpp  stress_test.cpp
